[tool.poetry]
name = "gai-apps"
version = "0.1.0"
description = ""
authors = ["Jae hyeon <wjs2063@naver.com>"]
readme = "README.md"
packages = [{include = "gai_apps"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.115.8"
pytest = "^8.3.4"
langchain = "^0.3.18"
langchain-core = "^0.3.34"
pydantic = "^2.10.6"
redis = "^5.2.1"
tortoise-orm = "^0.24.0"
langchain-community = "^0.3.17"
langchain-experimental = "^0.3.4"
langchain-openai = "^0.3.4"
langchain-redis = "^0.1.2"
pymupdf = "^1.25.3"
spacy = "^3.8.4"
tiktoken = "^0.8.0"
chromadb = "^0.6.3"
langchain-chroma = "^0.2.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
