[tool.poetry]
name = "gai-apps"
version = "0.1.0"
description = ""
authors = ["Jae hyeon <wjs2063@naver.com>"]
readme = "README.md"
packages = [{include = "gai_apps"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.115.8"
pytest = "^8.3.4"
langchain = "^0.3.18"
langchain-core = "^0.3.34"
pydantic = {extras = ["email"], version = "^2.10.6"}
redis = "^5.2.1"
tortoise-orm = "^0.24.0"
langchain-community = "^0.3.17"
langchain-experimental = "^0.3.4"
langchain-openai = "^0.3.4"
langchain-redis = "^0.1.2"
pymupdf = "^1.25.3"
spacy = "^3.8.4"
tiktoken = "^0.8.0"
chromadb = "^0.6.3"
langchain-chroma = "^0.2.1"
wikipedia = "^1.4.0"
black = "^25.1.0"
chainlit = "^2.2.0"
langchain-milvus = "^0.1.8"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
asyncpg = "^0.30.0"
bcrypt = "4.0.1"
passlib = "^1.7.4"
types-passlib = "^1.7.7.20241221"
types-python-jose = "^3.3.4.20240106"
langgraph = "^0.2.71"
celery = {extras = ["redis"], version = "^5.4.0"}
psycopg = "^3.2.4"
psycopg2-binary = "^2.9.10"
geopy = "^2.4.1"
grpcio = "1.60.1"
fastapi-mail = "^1.4.2"
google-api-python-client = "^2.162.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"
langchain-groq = "^0.2.5"
fastapi-mcp = "^0.1.4"
mcp = {extras = ["cli"], version = "^1.6.0"}
langchain-mcp-adapters = "^0.0.7"


[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
